[gd_scene load_steps=14 format=3 uid="uid://sh3kusfs526f"]

[ext_resource type="Script" path="res://character_animation/checkpoint/check_point.gd" id="1_htbl4"]
[ext_resource type="Texture2D" uid="uid://b055wdhmrxutq" path="res://character_animation/checkpoint/Chackpoint.png" id="1_w7kts"]
[ext_resource type="AudioStream" uid="uid://df30ao2b3efrg" path="res://sound/Checkpoint.wav" id="3_8c2nv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_05hqf"]
atlas = ExtResource("1_w7kts")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_88jgt"]
atlas = ExtResource("1_w7kts")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_avcln"]
atlas = ExtResource("1_w7kts")
region = Rect2(120, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_1udp7"]
atlas = ExtResource("1_w7kts")
region = Rect2(180, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yngh"]
atlas = ExtResource("1_w7kts")
region = Rect2(240, 0, 60, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_ah8hd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_05hqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88jgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avcln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1udp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yngh")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_015uj"]
size = Vector2(21, 68.25)

[sub_resource type="Animation" id="Animation_egbuk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_icli2"]
resource_name = "Activated"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4718t"]
_data = {
"Activated": SubResource("Animation_icli2"),
"RESET": SubResource("Animation_egbuk")
}

[node name="CheckPoint" type="Node2D"]
light_mask = 64
visibility_layer = 3
script = ExtResource("1_htbl4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.816667, 0.816667)
sprite_frames = SubResource("SpriteFrames_ah8hd")
animation = &"Idle"

[node name="AreaCheckPoint" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 3

[node name="Collision" type="CollisionShape2D" parent="AreaCheckPoint"]
position = Vector2(-7, -20.5)
scale = Vector2(1.33333, 1.33333)
shape = SubResource("RectangleShape2D_015uj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4718t")
}

[node name="SFX_Checkpoint" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8c2nv")
volume_db = -10.0
bus = &"SFX"

[connection signal="body_entered" from="AreaCheckPoint" to="." method="_on_area_check_point_body_entered"]
